# research-assistants-crew

./: README.md  instruction.md  pyproject.toml
results/: identify_novel_project_example.md  literature_review_example.md  research_problem_example.md
src/research_assistants/: crew.py  main.py
src/research_assistants/config/: agents.yaml  tasks.yaml
