[project]
name = "research_assistants"
version = "0.1.0"
description = "research-assistants using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
research_assistants = "research_assistants.main:run"
run_crew = "research_assistants.main:run"
train = "research_assistants.main:train"
replay = "research_assistants.main:replay"
test = "research_assistants.main:test"
run_with_trigger = "research_assistants.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
